Fixed bug with symbol buttons not showing up on chrome

--- a/static/css/userinterface.css
+++ b/static/css/userinterface.css
@@ -170,7 +170,7 @@ border-color: #000000;
   height: 100%;
   display: table-cell;
   padding: 1%;
-   border:"black";
+  border: black;
 
 }
 
@@ -249,6 +249,10 @@ td{
   margin:0.5%;
   height:96%;
   font-size: x-large;
+}
+
+.btn.symbol {
+  padding: 0px;
 }
 
 .btn{
